# ranking_user_server

./: CMakeLists.txt
src/: AsteriskMockup.cpp  AsteriskMockup.h  WebServer.cpp  WebServer.h  main.cpp
test/: ranking_user_server_test.cpp
